--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,2 +1,3 @@
 $card-width: 200px;
 $card-height: $card-width * 1.5;
+$catalog-gap: 48px;
